# dialogSys

./: .gitignore  README.md
build-soundbasedreaction-Desktop-Default/: CMakeCache.txt
build-testdialog-UserDefined-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  main  test_dialog.cbp
local/Converter/: CMakeLists.txt  add_to_local.cpp  compile.sh  complieTo32bit.sh  converter.cpp  converter.h  qiproject.xml
local/Converter/.qi/: path.conf  qibuild.xml
local/wakeUp/: CMakeLists.txt  add_to_local.cpp  compile.sh  qiproject.xml  wakeup.cpp  wakeup.h
local/wakeUp/.qi/: path.conf  qibuild.xml
local_test/: CMakeLists.txt  qiproject.xml
python/: .test2speech.py.swp  test2speech.py
soundbasedreaction/: CMakeLists.txt  alsoundbasedreaction.cpp  alsoundbasedreaction.h  curl.sh  main.cpp
testdialog/: CMakeLists.txt  Makefile  add_to_local.cpp  catchevents.cpp  catchevents.h  converter.cpp  converter.h  curl.sh  dialog.sh  dialogtext.cpp  dialogtext.h  exec_shell.cpp  grabcafe.cpp  grabcafe.h  main.cpp  speechtotext.cpp  speechtotext.h  test.sh  texttospeech.cpp  texttospeech.h  upload.sh  wakeup.cpp  wakeup.h
testdialog/iflytek/: package.xml  toolchain.xml
testdialog/iflytek/share/cmake/msc/: msc-config.cmake
testdialog/msc/: user.perf
testdialog/msc/acb24ca9a09adadc0cb5c62c36f28fc6/: urec.data
